src/test/ui/parser/unsized.stderr
error: expected `where`, `{`, `(`, or `;` after struct name, found `for`
  --> $DIR/unsized.rs:15:11
   |
LL | struct S1 for type; //~ ERROR expected `where`, `{`, `(`, or `;` after struct name, found `for`
   |           ^^^ expected `where`, `{`, `(`, or `;` after struct name

error: aborting due to previous error

